fixed alignment

--- a/frontend/src/styles/tribe.scss
+++ b/frontend/src/styles/tribe.scss
@@ -1,4 +1,7 @@
 .pageTribe {
+  height: 100%;
+  display: grid;
+  align-items: center;
   .tribePage {
     &.preloader {
       display: grid;
